Fixed spacing issues and color issues in Auth.jsx buttons and toggle.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,14 +41,15 @@ h1 {
 
 /* typed text */
 .amplify-input {
-  color: #f5f5f5;
+  color: #f5f5f5 !important;
 }
 
 /* placeholder text for when entering name or email or password */
 .amplify-input::placeholder {
-  color: rgba(245, 245, 245, 0.55);
+  color: rgba(245, 245, 245, 0.55) !important;
   opacity: 1;
 }
+
 
 /* labels will all be white */
 .amplify-label {
@@ -73,7 +74,6 @@ h1 {
   text color white, border color the same as others
 */
 .amplify-togglebutton {
-  
   background-color: rgba(59, 26, 18, 0.55) !important;
   color: #f5f5f5 !important;
   border: 1px solid rgba(245, 245, 245, 0.55) !important;
